Fixed Overlapping Drawer

--- a/LandingPage/Styles/style.scss
+++ b/LandingPage/Styles/style.scss
@@ -1,5 +1,6 @@
 .drawer {
     background-color: #363636 !important;
+    z-index: 2;
     height: 100% !important;
     width: 260px !important;
     -webkit-transform: translateX(100%);
